app/assets/stylesheets/global.scss
/* ... */
.cluster-button{
  white-space: nowrap;
  background-color: $primary-section-color;
  background-position: 10px center;
  color: $content-bg-color;
  height: 30px;
  border: none;
  border-radius: 2px;
  text-transform: capitalize;
  font-weight: 500;
  font-family: "Open Sans", sans-serif !important;
  min-width: 154px;
  width: fit-content;
  font-size: 9pt !important;
  transition: background-color 0.2s!important;

  &:hover{
    background-color: darken($primary-section-color, 10%)!important;
  }

  &.icon-filter-white{
    padding: 0 15px 0 38px;
    background-position: 7px center!important;
  }

  &.icon-submit{
    min-width: 135px;
  }

  &.icon-search{
    min-width: 110px;
    background-size: 17px;
  }

}

.copycat-tool-footer .cluster-button{
  width: 135px;
  background-size: 15px;
  &.copycat-clear-btn {
    background-color: $type-faint-accent;
    color: unset;
    background-size: 22px;
    padding-left: 39px;
    width: unset;
    &:hover {
      background-color: darken($nav-toolbar-color, 10%)!important;
    }
  }
}

#clusters-nav-regex-wrapper {
  display: flex;

  .clusters-nav-regex-container {
    align-items: center;
    display: flex;
    height: 30px;
    margin: 9px 0 0 0;

    input {
      margin: 0;
    }

    label {
      font-size: 11px;
      font-weight: 400;
      margin: 0 5px 0 0;
    }
  }
}

#wsa_statuses{
  font-family: "Open Sans", sans-serif !important;
  min-width: 300px;
  border: 1px solid #dddddd !important;
  padding: 0 5px !important;
  margin-right: 10px;
  height: 30px;
  background-image: none;
  color:$type-lighter-color!important;
}

.open-in-tab-btn, .whois-btn, .google-btn, .cluster-dup-btn {
  background-repeat: no-repeat;
  background-position: center center;
  width: 20px;
  height: 20px;
  border-radius: 2px;
  border: none;
  float: right;
}

.open-in-tab-btn {
  background-color: $primary-section-color;
  background-image: url(image_path('icon_open_viewable_white.svg'));
  background-size: 75%;
}

.whois-btn {
  background-image: url(image_path('icon_whois.svg'));
  background-color: $nav-toolbar-color;
}

.sdr-whois-btn {
  background-color: $nav-toolbar-color;
  background-image: url(image_path('icon_whois_grey.svg'));
  background-position: 4px center;
  background-repeat: no-repeat;
  border-radius: 2px;
  border: none;
  float: right;
  height: 20px;
  padding: 0 10px 0 20px;
}

.sdr-adjust-rep-btn {
  background-color: $nav-toolbar-color;
  background-image: url(image_path('icon_reputation_star_grey.svg'));
  background-position: 4px center;
  background-repeat: no-repeat;
  border-radius: 2px;
  border: none;
  float: right;
  height: 20px;
  padding: 0 10px 0 20px;
}

.google-btn {
  background-image: url(image_path('icon_google_grey.svg'));
  background-color: $nav-toolbar-color;
}

.cluster-dup-btn {
  background-image: url(image_path('icon_mark_duplicate.svg'));
  background-color: $nav-toolbar-color;
  background-size: 16px 16px;
}


.right-margin {
  margin-right: 4px;
}

.category-column {
  min-width: 250px;
}

.category-column fieldset {
  margin: 0;
}

.domain-column {
  min-width: 300px;
}

#copycat_dialog {
  overflow: visible;

  .selectize-input {
    border: 1px solid #dddddd !important;
    padding: 0 5px !important;

    .item {
      padding: 2px 6px;
      margin: 2px;
      font-size: 8pt;
    }
  }

  .selectize-dropdown {
    margin: 4px 0 0 -2px;
  }
}


.category-column .form-control.selectize.selectize-dropdown.cluster_categories {
  margin-top: 8px;
  padding: 0 !important;
}

.selectize-input.has-items + .category-column .form-control.selectize.selectize-dropdown.cluster_categories {
  margin-top: 4px !important;
}

.cluster-mgt-loader-wrapper, .webcat-loader-wrapper, .webrep-loader-wrapper, .sdr-loader-wrapper  {
  display: block;
  position: absolute;
  width: 170px;
  .gear-loader-wrapper {
    margin-right: 5px;
    margin-top: 6px;
    float: left;
  }
  .loader-msg {
    display: inline-block;
    line-height: 3.5;
    font-style: oblique;
  }
}

.res_id{
  font-weight: 200;
}

.webcat-loader-wrapper, .webrep-loader-wrapper, .sdr-loader-wrapper {
  margin: 0 37%;
}

.sdr-loader-wrapper {
  top: 5px;
}

.loader-msg {
  color: $type-lighter-color;
  font-style: oblique;
}
.webcat-loader{
  margin: auto 29%;
  .loader-msg{
    font-size: 8.5pt;
    position: absolute;
    margin-left: 10px;
    margin-top: -5px;
  }
}
#inline-webcat.webcat-loader{
  margin: 12px 45%!important;
  position: absolute;
  .loader-msg{
    margin-top: 10px;
  }
}
#cat_multiple_urls, #cat_dif_submit{
  margin-top: 20px;
}
#categorize-same-form, #categorize-diff-form{
    .webcat-loader {
      margin: -10px 10%;
      position: absolute;
      display: inline-block;
    }
    .loader-msg{
      width: 90px;
      margin-top: 6px;
    }
}

.ticket-age-over3hr {
  color: $warning-accent-color;
  font-weight: bold;
}

.ticket-age-over12hr{
  color: $second-section-color;
  font-weight: bold;
}

.sorting {
  background-position-x: 95% !important;
}

.sorting_1, .sorting_asc, .sorting_desc {
  background-position-x: 95% !important;
  background-color: #d7dadb2b;
}

th.sorting_1, th.sorting_asc, th.sorting_desc {
  color: $bug-section-color;
  background-color: #d7dadb2b;
}

#time-submitted {
  width: 150px;
}

#user-settings-dropdown-button {
  background-image: url(image_path('icon_gear_settings_grey.svg'));
  background-repeat: no-repeat;
  width: 30px;
  height: 44px;
  background-size: 22px 22px;
  background-position: center center;
  margin-right: 6px;
  display: inline-block;
  background-color: transparent;
  border: none;
}

#nav-banner a.nav-username {
  display: inline-block;
  width: auto;
  float: right;
  margin-right: 8px;
}

#login-div .dropdown.open {
  background-color: transparent !important;
}

#login-div .dropdown.open #user-settings-dropdown-button {
  background-image: url(image_path('icon_gear_settings_light_grey.svg'));
}
/* ... */

